--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@
 
 :root {
 	--green-color: #5bf870;
-	--green-bg: #05321e;
+	--green-bg: #344d38;
 	--red-color: #c0100a;
 	--red-bg: #1b0302;
 	--blue-color: #a5a5ff;
