--- a/style/video.css
+++ b/style/video.css
@@ -42,9 +42,15 @@
 
 .image-container {
 	background-repeat: no-repeat;
-	background-position: center;
-	position: relative;
+	/* background-position: center; */
+	background-position: 50% 50%;
+
+    /* background-position: center center;  */
+	background-size: contain;
+	/* position: relative; */
 	height: 100%;
+	min-height:100%;
+
 	/* padding: 2rem; */
 	/* overflow-y: auto;
 	overflow-x: hidden; */
